--- a/bdi_mvc/WebContent/WEB-INF/web.xml
+++ b/bdi_mvc/WebContent/WEB-INF/web.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	id="WebApp_ID" version="3.0">
-	<display-name>bdi_mvc</display-name>
-	<welcome-file-list>
-		<welcome-file>/WEB-INF/views/index.jsp</welcome-file>
-	</welcome-file-list>
-	<servlet>
-		<servlet-name>ViewServlet</servlet-name>
-		<servlet-class>com.bdi.mvc.servlet.ViewServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>ViewServlet</servlet-name>
-		<url-pattern>/views/*</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>UserServlet</servlet-name>
-		<servlet-class>com.bdi.mvc.servlet.UserServlet</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-		<servlet-name>UserServlet</servlet-name>
-		<url-pattern>/user/*</url-pattern>
-	</servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+  <display-name>bdi_mvc</display-name>
+  <welcome-file-list>
+    <welcome-file>/WEB-INF/views/index.jsp</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <servlet-name>ViewServlet</servlet-name>
+    <servlet-class>com.bdi.mvc.servlet.ViewServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ViewServlet</servlet-name>
+    <url-pattern>/views/*</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>UserServlet</servlet-name>
+    <servlet-class>com.bdi.mvc.servlet.UserServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserServlet</servlet-name>
+    <url-pattern>/user/*</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>MakerServlet</servlet-name>
+    <servlet-class>com.bdi.mvc.servlet.MakerServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MakerServlet</servlet-name>
+    <url-pattern>/maker/*</url-pattern>
+  </servlet-mapping>
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/WEB-INF/views/error/notFound.jsp</location>
+  </error-page>
 </web-app>
