--- a/bdi_mvc/WebContent/WEB-INF/web.xml
+++ b/bdi_mvc/WebContent/WEB-INF/web.xml
@@ -13,6 +13,22 @@
     <url-pattern>/views/*</url-pattern>
   </servlet-mapping>
   <servlet>
+    <servlet-name>MakerServlet</servlet-name>
+    <servlet-class>com.bdi.mvc.servlet.MakerServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MakerServlet</servlet-name>
+    <url-pattern>/maker/*</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>TestServlet</servlet-name>
+    <servlet-class>com.bdi.mvc.servlet.TestServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TestServlet</servlet-name>
+    <url-pattern>/test</url-pattern>
+  </servlet-mapping>
+  <servlet>
     <servlet-name>UserServlet</servlet-name>
     <servlet-class>com.bdi.mvc.servlet.UserServlet</servlet-class>
   </servlet>
@@ -21,15 +37,15 @@
     <url-pattern>/user/*</url-pattern>
   </servlet-mapping>
   <servlet>
-    <servlet-name>MakerServlet</servlet-name>
-    <servlet-class>com.bdi.mvc.servlet.MakerServlet</servlet-class>
+    <servlet-name>DepartServlet</servlet-name>
+    <servlet-class>com.bdi.mvc.servlet.DepartServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>MakerServlet</servlet-name>
-    <url-pattern>/maker/*</url-pattern>
+    <servlet-name>DepartServlet</servlet-name>
+    <url-pattern>/depart/*</url-pattern>
   </servlet-mapping>
   <error-page>
-  	<error-code>404</error-code>
-  	<location>/WEB-INF/views/error/notFound.jsp</location>
+    <error-code>404</error-code>
+    <location>/WEB-INF/views/error/notFound.jsp</location>
   </error-page>
 </web-app>
